# auth-pern-stack/server/src/routes/auth.routes.ts
@@ -1,9 +1,5 @@
 import express from "express";
 import {
-  getGithubLoginCallback,
-  getGoogleLoginCallback,
-  githubLogin,
-  googleLogin,
   loginUser,
   logoutUser,
   refreshAccessToken,
@@ -13,6 +9,12 @@ import {
 import { validateData } from "../middlewares/zod-validation.js";
 import { loginSchema, registerSchema } from "../validators/auth-schema.js";
 import { authMiddleware } from "../middlewares/auth-middleware.js";
+import {
+  getGithubLoginCallback,
+  getGoogleLoginCallback,
+  githubLogin,
+  googleLogin,
+} from "../controllers/oauth.controller.js";
 
 const router = express.Router();
 
@@ -21,7 +23,6 @@ router.post("/login", validateData(loginSchema), loginUser);
 router.post("/logout", authMiddleware, logoutUser);
 router.get("/verify-email", verifyEmail);
 router.post("/refresh-token", refreshAccessToken);
-router.get("/google", googleLogin);
 router.get("/google", googleLogin);
 router.get("/google/callback", getGoogleLoginCallback);
 router.get("/github", githubLogin);
